# PyNGLDemos

./: .gitignore  DemoUI.ui  PyEnv.md  README.md  RunDemos.py  TODO.md  pyproject.toml
BlankNGL/: BlankNGL.py
BlankPySDL3/: README.md  main.py
BlankPySide6NGL/: README.md  main.py  using_mixin.py
BlankWebGPU/: README.md  Shader.wgsl  WebGPUWidget.py  main.py
DefferedLighting/: FloorPipeline.py  GBuffer.wgsl  GBufferChecker.wgsl  LightingPipeline.py  SimpleWebGPU.py  TeapotPipeline.py  lighting.wgsl
FBO/: SimpleFBO.py
FBODemos/Blit/: README.md  main.py
FontRendering/: README.md  main.py
GLFWNGL/: GLFWNGL.py  NGLScene.py
Lights/: README.md  main.py
Notebooks/: TestCanvas.py  UniformBuffers.py  WebGPUTriangle.py
ObjViewer/: ObjViewer.py  README.md
QtNGL/: MainWindow.ui  NGLScene.py  QtNGL.py
SDLNGL/: NGLScene.py  SDLNGL.py
SimpleNGL/: SimpleNGL.py
SimplePyNGL/: ArcBallRotation.py  PySideSimpleNGL.py  README.md  SDL3NGL.py
SimpleTexture/: README.md  TextureFragment.glsl  TextureShader.wgsl  TextureVertex.glsl  TextureWebGPU.py  WebGPUWidget.py
SimpleWebGPU/: CheckerShader.wgsl  FloorPipeline.py  NumpyBufferWidget.py  README.md  SimpleWebGPU.py  TeapotPipeline.py  WebGPUWidget.py
VAOPrimitives/: README.md  main.py
VertexArrayObject/: Boid.py  BoidShaded.py  ChangingVAO.py  ChangingVAOMultiBuffer.py  MultiBufferVAOFactory.py  SimpleIndexVAOFactory.py
Voxels/: FrameBufferObject.py  Terrain.py  main.py
WebGPUMultiGeo/: DiffuseShader.wgsl  NumpyBufferWidget.py  Pipeline.py  README.md  WebGPUMultiGeo.py
shaders/: PBRVertex.glsl
(+36 files in other folders)
